# Sticho

./: .gitignore  CHANGELOG.md  README.md  mcp.json  skills-lock.json
.agents/: AGENTS.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py  test_db_conn.py  test_endpoints.py  test_models.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  categories.py  customer_auth.py  leads.py  locations.py  reviews.py  services.py  tailors.py
backend/app/core/: db.py  security.py  supabase_client.py
backend/app/models/: base.py  category.py  customer.py  lead.py  location.py  otp.py  portfolio.py  review.py  service.py  tailor.py
backend/app/schemas/: auth.py  category.py  customer_auth.py  lead.py  location.py  portfolio.py  review.py  service.py  tailor.py
backend/app/services/: notification.py
docs/: BACKEND_CLOUDINARY_ISSUE.md  BUGFIX-unused-vars-jeelan80.md  README.md  SCRUM-10-19-26-customer-auth-reviews-dashboard-jeelan80.md  SCRUM-10-customer-auth-sameersam648.md  SCRUM-13-search-autocomplete-jeelan80.md  SCRUM-14-save-shortlist-jeelan80.md  SCRUM-16-browse-portfolio-amankumar.md  SCRUM-17-whatsapp-contact-amankumar.md  SCRUM-18-call-contact-amankumar.md  SCRUM-19-ratings-reviews-sameersam648.md  SCRUM-20-email-auth-amankumar.md  SCRUM-21-create-tailor-profile-jeelan80.md  SCRUM-22-cloudinary-cdn-amankumar.md  SCRUM-22-upload-portfolio-jeelan80.md  SCRUM-23-service-categories-jeelan80.md  SCRUM-24-working-hours-antigravity.md  SCRUM-24-working-hours-jeelan80.md  architecture-log.md  testing.md  (+15 more)
(+98 files in other folders)
