[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.3",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentry-sdk[fastapi]>=2.63.0",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
